[package]
name = "val-serde"
version = "0.1.0"
edition = "2021"
description = "Serializable wrapper for wasmtime component Val types"
license = "MIT OR Apache-2.0"

[dependencies]
wasmtime = { version = "31.0", features = ["component-model"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"
